--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.14)       
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+
 project(fc_slam VERSION 1.0.0 LANGUAGES CXX) 
 set(CMAKE_CXX_STANDARD 17)               
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
